<resources>
    <string name="app_name">Bersama Zakat App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pengertian">Pengertian</string>
    <string name="pengertian_zakat_emas">
        \t\t\t\tMenurut bahasa, zakat berarti bersih, suci, tumbuh, dan berkembang. Sedangkan emas adalah logam mulia yang berwarna kuning dan memiliki nilai yang tinggi. Jadi, zakat emas berarti membersihkan harta emas dengan mengeluarkan sebagian darinya sebagai kewajiban karena Allah.\n\n
        \t\t\t\tMenurut istilah syariat, zakat emas adalah sejumlah harta emas tertentu yang wajib dikeluarkan oleh setiap muslim yang mampu pada setiap tahunnya, untuk diserahkan kepada orang-orang yang berhak menerimanya.\n\n
        \t\t\t\tZakat emas adalah zakat yang dikenakan atas emas yang dimiliki oleh seorang muslim yang telah mencapai nisab dan haul. Zakat emas merupakan salah satu bentuk ibadah yang bertujuan untuk membersihkan harta dari kotoran dan hak-hak orang lain, serta untuk menolong kaum fakir miskin dan golongan yang berhak menerima zakat.\n\n
        Dalil zakat emas dari Al-Quran adalah sebagai berikut:\n\n
        وَالَّذِينَ يَكْنِزُونَ الذَّهَبَ وَالْفِضَّةَ وَلَا يُنْفِقُونَهَا فِي سَبِيلِ اللَّهِ فَبَشِّرْهُمْ بِعَذَابٍ أَلِيمٍ\n\n
        Walladzina yaknizunal dzahaba wal fidda wa la yunfiqunaha fi sabilillahi fabasyirhum bi adzabin alim\n\n
        Artinya: Dan orang-orang yang menyimpan emas dan perak dan tidak menafkahkannya pada jalan Allah, maka beritahukanlah kepada mereka, (bahwa mereka akan mendapat) siksa yang pedih. (QS. At-Taubah: 34)\n\n
        Dalil zakat emas dari hadis adalah sebagai berikut:\n\n
        عَنْ عَبْدِ اللَّهِ بْنِ عَمْرٍو رَضِيَ اللهُ عَنْهُمَا قَالَ قَالَ رَسُوْلُ اللهِ صَلَّى الله عليه وسلم لَيْسَ عَلَى الذَّهَبِ إِلَّا الْخُمُسُ وَلَيْسَ عَلَى الْفِضَّةِ إِلَّا الْعُشْرُ\n\n
        Dari Abdullah bin Amr radhiyallahu anhuma, ia berkata: Rasulullah shallallahu alaihi wa sallam bersabda: Tidak ada kewajiban zakat atas emas kecuali seperlima dan tidak ada kewajiban zakat atas perak kecuali sepersepuluh. (HR. Abu Dawud no. 1564)
        \n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n
    </string>
    <string name="pengertian_zakat_fitrah">
        \t\t\t\Menurut bahasa, zakat berarti bersih, suci, tumbuh, dan berkembang. Sedangkan fitrah berarti asal, dasar, atau kodrat. Jadi, zakat fitrah berarti membersihkan diri sesuai dengan kodrat manusia sebagai hamba Allah yang beriman dan bertaqwa.\n\n
        \t\t\t\Menurut istilah syariat, zakat fitrah adalah sejumlah harta tertentu yang wajib dikeluarkan oleh setiap muslim yang mampu pada akhir bulan Ramadhan, sebelum shalat Idul Fitri, untuk diserahkan kepada orang-orang yang berhak menerimanya.\n\n
        \t\t\t\Zakat fitrah adalah salah satu jenis zakat yang wajib dikeluarkan oleh setiap muslim yang mampu pada bulan Ramadhan, khususnya menjelang hari raya Idul Fitri. Zakat fitrah merupakan salah satu bentuk ibadah yang bertujuan untuk menyucikan diri dari segala dosa dan kesalahan yang dilakukan selama berpuasa, serta untuk membantu kaum fakir miskin dan golongan yang berhak menerima zakat.\n\n
        Dalil zakat fitrah dari Al-Quran adalah sebagai berikut:\n\n
        خُذْ مِنْ أَمْوَالِهِمْ صَدَقَةً تُطَهِّرُهُمْ وَتُزَكِّيهِمْ بِهَا وَصَلِّ عَلَيْهِمْ ۖ إِنَّ صَلَاتَكَ سَكَنٌ لَهُمْ ۗ وَاللَّهُ سَمِيعٌ عَلِيمٌ\n\n
        Khudz min amwalihim shadaqatan tuthahhiruhum wa tuzakkihim biha wa shalli \'alaihim, inna shalataka sakanun lahum, wallahu sami\’un \'alim\n\n
        Artinya: Ambillah zakat dari sebagian harta mereka, dengan zakat itu kamu membersihkan dan mensucikan mereka dan mendoalah untuk mereka. Sesungguhnya doa kamu itu (menjadi) ketenteraman jiwa bagi mereka. Dan Allah Maha Mendengar lagi Maha Mengetahui. (QS. At-Taubah: 103)\n\n
        Dalil zakat fitrah dari hadis adalah sebagai berikut:\n\n
        عَنْ ابْنِ عُمَرَ رَضِيَ اللهُ عَنْهُمَا أَنَّ رَسُوْلَ اللهِ صَلَّى الله عليه وسلم فَرَضَ زَكَاةَ الْفِطْرِ صَاعًا مِنْ تَمْرٍ أَوْ صَاعًا مِنْ شَعِيْرٍ عَلَى الْعَبْدِ وَالْحُرِّ وَالذَّكَرِ وَالْأُنْثَى وَالصَّغِيْرِ وَالْكَبِيْرِ مِنَ الْمُسْلِمِيْنَ وَأَمَرَ بِهَا أَنْ تُؤَدَّى قَبْلَ خُرُوْجِ النَّاسِ إِلَى الصَّلاَةِ\n\n
        Dari Ibnu Umar radhiyallahu ‘anhuma, bahwa Rasulullah shallallahu \‘alaihi wa sallam mewajibkan zakat fitrah, satu sha’ kurma atau satu sha\’ gandum, atas budak dan orang merdeka, laki-laki dan perempuan, anak kecil dan orang dewasa dari kalangan muslimin. Dan beliau memerintahkan agar zakat itu dikeluarkan sebelum orang-orang keluar untuk shalat (Idul Fitri). (HR. Al-Bukhari no. 1503 dan Muslim no. 984)
        \n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n
    </string>
    <string name="pengertian_zakat_profesi">
        \t\t\t\Menurut bahasa, zakat berarti pembersihan atau penyucian. Hal ini menunjukkan bahwa zakat dapat membersihkan harta individu dari sifat serakah dan egois, serta menciptakan rasa kepedulian terhadap sesama.\n\n
        \t\t\t\Menurut istilah, zakat penghasilan adalah zakat yang wajib dikeluarkan oleh setiap Muslim yang mampu atas harta yang berasal dari pendapatan atau penghasilan rutin dari pekerjaan yang tidak melanggar syariah. Nishab zakat penghasilan sebesar 85 gram emas per tahun. Kadar zakat penghasilan senilai 2,5%.\n\n
        \t\t\t\Zakat Penghasilan adalah bagian dari zakat mal yang wajib dikeluarkan atas harta yang berasal dari pendapatan/penghasilan rutin dari pekerjaan yang tidak melanggar syariah. Zakat penghasilan dikenal juga dengan istilah zakat profesi maupun zakat pendapatan.\n\n
        Zakat penghasilan memiliki beberapa tujuan, di antaranya:\n
        •Menyucikan hati dari sifat serakah dan menciptakan rasa kepedulian terhadap sesama.\n
        •Memberantas kemiskinan dengan memberikan bantuan finansial kepada yang membutuhkan.\n
        •Mengurangi ketidaksetaraan ekonomi dan sosial dengan mengumpulkan dan mendistribusikan zakat dengan benar.\n
        •Mendorong solidaritas sosial dengan mendukung rasa persaudaraan dan solidaritas sosial dalam komunitas Muslim dan di seluruh dunia.\n
        •Mendukung pertumbuhan ekonomi berkelanjutan dengan memberikan peluang kepada yang kurang beruntung untuk membangun usaha mereka sendiri.
        \n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n

    </string>
    <string name="pengertian_zakat_pertanian">
        \t\t\t\Menurut bahasa, zakat berarti tumbuh, berkembang, subur, atau bertambah. Hal ini menunjukkan bahwa zakat dapat meningkatkan keberkahan dan kemuliaan harta yang dizakati, serta memberikan manfaat bagi yang memberi dan menerima zakat.\n\n
        \t\t\t\Menurut istilah, zakat pertanian adalah zakat yang dikeluarkan setelah panen dari hasil pertanian jika telah mencapai nishab. Zakat pertanian merupakan zakat yang dikenakan atas hasil pertanian yang mengenyangkan atau mendatangkan penghasilan pada waktu panen. Zakat pertanian adalah bentuk rasa syukur atas nikmat Allah atas hasil yang tumbuh dan keluar dari bumi.\n\n
        \t\t\t\Zakat Pertanian adalah zakat yang wajib dikeluarkan atas hasil pertanian tertentu yang telah memenuhi nisab (batas minimum) dalam mengeluarkan zakat. Berbeda dengan zakat fitrah, zakat pertanian melibatkan objek hasil pertanian seperti biji-bijian, sayur-mayur, buah-buahan, umbi-umbian, dan tanaman lain yang memiliki nilai ekonomis.
        \n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n

    </string>
    <string name="text_home_page">Aktifitas diatas jika di scrol ke kanan dan ke kiri untuk memilih halaman zakat lainnya, jika ingin memilih salah satu maka klik bagian zakat yang ingin dituju agar dapat melakukan perhitungan dan juga mengetahui seperti pengertian, syarat, tata cara, dan referensi sudut pandang.
    \n\n\n\n\n\n\n\n\n\n\n\n\n\n</string>
    <string name="text_perhitungan">Halaman diatas adalah bagian dari perhitungan zakat yang telah dipilih dari halaman home, silahkan masukan nilai yang sesuai sehingga menghasilkan perhitungan yang akurat sesuai dengan perintah zakat yang sudah diperintahkan. Klik tombol hitung agar mengeluarkan hasil berapa nominal zakat yang harus dikeluarkan. Klik tombol panah kiri agar kembali kehalaman home.
    \n\n\n\n\n\n\n\n\n\n\n\n\n\n</string>
    <string name="text_konten">Aktifitas diatas adalah konten berisikan zakat yang telah dipilih, pada tab tersebut terdapat pengertian, syarat, tata cara, referensi pandangan, yang dapat disesuaikan oleh kebutuhan pengguna dan untuk dapat melihat lebih detailnya, maka pengguna dapat mengscroll halaman tersebut.
    \n\n\n\n\n\n\n\n\n\n\n\n\n\n</string>
    <string name="text_hasil_perhitungan">Aktifitas diatas jika anda menekan tombol hitung maka akan muncul tampilang tersebut yang akan memberikan informasi berapa banyak zakat yang harus pengguna keluarkan. Lalu ada tombol X yang berfungsi jika di klik maka akan menutup tampilan hasil dari perhitungan zakat.
    \n\n\n\n\n\n\n\n\n\n\n\n\n\n</string>
    <string name="text_bottom_navigation">Aktifitas diatas bagian dari tombol untuk mengarahkan kehalaman yang lain, jika pengguna mengklik tombol di bagian home maka pengguna akan mengarah ke halaman utama, jika pengguna mengklik panduan aplikasi maka pengguna akan mengarahkan ke halaman saat ini, jika pengguna mengklik about maka pengguna akan mengarahkan kehalaman about
    \n\n\n\n\n\n\n\n\n\n\n\n\n\n</string>
    <string name="text_about">Aktifitas diatas adalah bagian dari halaman about atau tentang aplikasi yang dapat di scroll, pada halaman ini pengguna dapat mengetahui tentang aplikasi, tim yang terlibat dalam pengembangan aplikasi ini, ditambah juga dengan refrensi link dari beberapa informasi konten.
    \n\n\n\n\n\n\n\n\n\n\n\n\n\n</string>
</resources>